# CPUinfoAndControl

./: .cdtbuild  .gitattributes  .gitignore  .project  BUILD.md  Benutzung.txt  BuildTimeString.h  CMakeLists.txt  ConfigurationHandler.hpp  DummyUserInterface.hpp  GriffinControl_config.xml  GriffinControl_log.txt  ICalculationThread.hpp  IPC_data_multitread_sync.jnt  InstableCPUcoreVoltageDefintions.h  LICENSE  PumaStateCtrl.sln  PumaStateCtrl.vcproj  R5a22116  README.md  ReadMe.txt  TODO.TXT  Thumbs.db  UserInterface.hpp  UserInterfaceBase.hpp  Windows_compatible_typedefs.h  Windows_specific.h  X86_info_and_control_log.txt  config.xml  copyright_header.txt  create_sourcecode_zip_file.awk  create_wxGUI.sh  criticalsection_type.hpp  global.h  how_to_build.txt  main.cpp  preprocessor_helper_macros.h  start_wxGUI.sh  start_wxGUI_Windows.bat  stdafx.cpp  (+4 more)
CPUiAndCdynLibs/: CMakeLists.txt  create_UNIX_makefile.sh
CPUiAndCdynLibs/AMD/K7_IandCdynLib/: dynlib_main.cpp
CPUiAndCdynLibs/AMD/family0Fhex_IandCdynLib/: how_to_build.txt
CPUiAndCdynLibs/AMD/family15hex_IandCdynLib/: CMakeLists.txt  create_UNIX_makefile.sh  how_to_build.txt
CPUiAndCdynLibs/Intel/Core2_IandCdynLib/: CMakeLists.txt  create_UNIX_makefile.sh  dllmain.cpp
CPUiAndCdynLibs/Intel/Haswell_IandCdynLib/: dllmain.cpp
CPUiAndCdynLibs/Intel/Nehalem_IandCdynLib/: dllmain.cpp
Controller/: BuildTimeString.cpp  CMakeLists.txt  CPUcontrolBase.cpp  CPUcontrolBase.hpp  CPUcontrolServiceBase.cpp  CPUcontrolServiceBase.hpp  CPUcontrollerDynLib_function_definitions.h  CPUcoreLoadBasedDynVoltnFreqScaling.cpp  CPUcoreLoadBasedDynVoltnFreqScaling.hpp  CPUindependentHelper.cpp  CPUindependentHelper.h  CalculationThreadProc.cpp  CalculationThreadProc.h  CommandLineParams.h  ConfigurationHandler.hpp  DummyCPUaccess.hpp  DynFreqScalingThreadBase.cpp  DynFreqScalingThreadBase.hpp  DynLibCPUcontroller.cpp  DynLibCPUcontroller.h  DynLibCPUcontroller.hpp  DynLibCPUcoreUsageGetter.hpp  DynLibHandler_type.hpp  DynVoltAndFreqScaling.cpp  DynVoltAndFreqScaling.hpp  ExportedExeFunctions.h  ExportedExeFunctionsCPUaccess.cpp  ExportedExeFunctionsCPUaccess.hpp  ICPUcoreUsageGetter.hpp  ICalculationThread.hpp  IDynFreqScalingAccess.hpp  I_CPUaccess.cpp  I_CPUaccess.hpp  I_CPUcontroller.cpp  I_CPUcontroller.hpp  I_CPUcontrollerAction.cpp  I_CPUcontrollerAction.hpp  I_ServerProcess.hpp  Intel_registers.h  Linux.h  (+20 more)
Controller/CPUcontrollerDynLibs/: CMakeLists.txt  build_Nehalem_dynlib_with_64bitMinGW_TDM_720QM.bat  build_and_redirect_build_output_to_file.sh  create_UNIX_makefile.sh  function_specifiers.h
Controller/CPUcontrollerDynLibs/AMD/K10/: dynlib_main.cpp
Controller/CPUcontrollerDynLibs/AMD_K7/: dynlib_main.cpp
Controller/CPUcontrollerDynLibs/AMD_NPT_family_0F/: CMakeLists.txt  create_UNIX_makefile.sh  dllmain.cpp
Controller/CPUcontrollerDynLibs/AMD_family_15hex/: CMakeLists.txt  dynlib_main.cpp  how_to_build.txt
Controller/CPUcontrollerDynLibs/Core2ControllerDynLib/: CMakeLists.txt  create_UNIX_makefile.sh  dllmain.cpp
Controller/CPUcontrollerDynLibs/CoreControllerDynLib/: dynlib_main.cpp
Controller/CPUcontrollerDynLibs/GriffinControllerDynLib/: dllmain.cpp
Controller/CPUcontrollerDynLibs/HaswellControllerDynLib/: Nehalem_Windows.cpp  dllmain.cpp
Controller/CPUcontrollerDynLibs/Intel/ODCM/: ThrottleRatioFunctions.hpp
Controller/CPUcontrollerDynLibs/NehalemControllerDynLib/: Nehalem_Windows.cpp  Nehalem_Windows.h  dllmain.cpp
Controller/CPUcontrollerDynLibs/PentiumMcontrollerDynLib/: dllmain.cpp
Debug/: BuildLog.htm  PStates.d  PumaStateCtrl  Pumastatectrl_debug.txt  main.d  makefile  mt.dep  sources.mk  subdir.mk
Info/: CPU_controller_DLL.c2h  CPU_controller_sample.c  DynVoltandFreqScaling.txt  Fehler_in_Win_Vista_nach_falschem_PumaStateCtrl.txt  Ideen.txt  TODO.txt  (+7 more)
Linux/proc.statCPUusageGetter/: CMakeLists.txt  main.cpp
Windows/PDH_CPUcoreUsageGetterDLL/: CMakeLists.txt  dllmain.cpp
wxWidgets/: App.cpp  App.hpp  App_FindLowestStableCPUcoreVoltage.cpp  App_service_actions.cpp  CMakeLists.txt  CPUIDaccess.cpp  CPUIDaccess.hpp  CalculationThread.hpp  Controller.cpp  Controller.hpp  DynFreqScalingDlg.cpp  DynFreqScalingDlg.hpp  DynFreqScalingThread.cpp  DynFreqScalingThread.hpp  FloatValidator.cpp  FloatValidator.hpp  FreqAndVoltageSettingDlg.cpp  FreqAndVoltageSettingDlg.hpp  MSRaccess.cpp  MainFrame.cpp  MainFrame.hpp  PowerEvent.hpp  how_to_build_release_version_with_MSVC.txt  wxDynFreqScalingTimer.cpp  wxDynFreqScalingTimer.hpp  wxDynLinkedCPUcoreUsageGetter.hpp  wxDynamicDialog.cpp  wxDynamicDialog.hpp  wxFrequencyInMHz_Slider.hpp  wxStringHelper.h
wxWidgets/Controller/: DynLibHandler.cpp  DynLibHandler.hpp  wxDynLibCPUcontroller.cpp  wxDynLibCPUcontroller.hpp  wxDynLibCPUcoreUsageGetter.cpp  wxDynLibCPUcoreUsageGetter.hpp  wxServiceSocketClient.cpp  wxServiceSocketServer.cpp  wxStringHelper.cpp  wxStringHelper.h  x86IandCservice.cpp  x86IandCservice.hpp
wxWidgets/Controller/non-blocking_socket/client/: wxServiceSocketClient.cpp  wxServiceSocketClient.hpp
wxWidgets/Controller/non-blocking_socket/server/: wxServiceSocketServer.cpp  wxServiceSocketServer.hpp
wxWidgets/Controller/socket/client/: wxServiceSocketClient.hpp
wxWidgets/Controller/socket/server/: wxServiceSocketServer.hpp
wxWidgets/ModelData/: wxCPUcoreID.cpp  wxCPUcoreID.hpp
wxWidgets/UserInterface/: AboutDialog.cpp  AboutDialog.hpp  App_ShowTaskBarIcon.cpp  CMakeLists.txt  CPUregisterReadAndWriteDialog.cpp  CPUregisterReadAndWriteDialog.hpp  CPUregisterWriteDialog.cpp  CPUregisterWriteDialog.hpp  DynFreqScalingDlg.cpp  DynFreqScalingDlg.hpp  FloatValidator.cpp  FloatValidator.hpp  FreqAndVoltageSettingDlg.cpp  FreqAndVoltageSettingDlg.hpp  MainFrame.cpp  MainFrame.hpp  TaskBarIcon.cpp  TaskBarIcon.hpp  VolnFreqSettingDlg_Create.hpp  VoltnFreqSettingsDlg_UnstableCPUcoreVoltageDetect.cpp  wxDynamicDialog.cpp  wxDynamicDialog.hpp  wxExamineCPUregistersDialog.cpp  wxExamineCPUregistersDialog.hpp  wxFrequencyInMHz_Slider.hpp
wxWidgets/multithread/: wxConditionBasedI_Condition.hpp  wxThreadBasedI_Thread.cpp  wxThreadBasedI_Thread.hpp
(+545 files in other folders)
